# production-ai-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: ci-cd.yml
app/: config.py  main.py
app/routes/: llm.py
app/schemas/: llm.py
app/services/: llm_service.py
tests/: test_main.py
ui/: app.py  main.py
